# simpleCFS

./: Makefile  README.md  sujet.md
python/: Makefile  pyproject.toml
python/src/: cfs_simp.py  cfscalc.py  cfsengine.py  cli.py  logger.py  main.py  runqueue.py  task.py  utils.py
python/tests/: conftest.py  test_cfscalc.py  test_logger.py  test_runqueue.py  test_task.py  test_utils.py
src/: cfsengine.py  logger.py
src/python/: cfs_simp.py  runqueue.py  task.py  utils.py
src/python/tests/: test.py
testfiles/: td1.txt
tests/: conftest.py  test.py  test_logger.py
tests/testfiles/: a.txt
