[project]
name = "simplecfs"
version = "0.1.0"
author = {name = "VÉRET Salif", email = "salif.veret@telecomnancy.eu"}
description = "Simple CFS Implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
scfs = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
